--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
                         <button class="Hotspot" slot="hotspot-4"
                             data-position="-0.010002614677618059m 0.060397070733679455m -0.07059201051732772m"
                             data-normal="-1m 0m 0m" data-visibility-attribute="visible">
-                            <div class="HotspotAnnotation 2">Replaceable Cartridge for Endless Burning</div>
+                            <div class="HotspotAnnotation 2">Replaceable Cartridge</div>
                         </button>
                         <button class="Hotspot" slot="hotspot-5"
                             data-position="0.033522425627416134m 0.017586686547540795m 0.0499497186998054m"
@@ -215,7 +215,7 @@
             </div>
             <div class="continue-section">
                 <div class="left">
-                    <h4>360-Degree Visible Flames: Captivating Elegance for Every Space</h4>
+                    <h4>Elegance for every space</h4>
                     Whether placed in the center of a room or on a table, the candle's flames are visible from every
                     angle, captivating viewers with their dancing, flickering movement.
                     This innovative design offers a truly immersive experience, enhancing any environment with its
