--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
             </div>
             <section class="candle-section-head">
                 <div class="candle-text">
-                    Lorem ipsum dolor sit amet consectetur. Pellentesque velit duis enim porta neque. Feugiat leo dui
-                    libero tortor volutpat tortor porttitor habitasse.
+                    Ice candle <br>
+                    Future is now
                 </div>
                 <div class="wix-img wix-img-anim">
                     <model-viewer class="model" src="./media/assets/CandleStaticLight.gltf" ar
