text and padding fix

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                     Future is now
                 </div>
                 <div class="wix-img wix-img-anim">
-                    <model-viewer class="model" src="./media/assets/CandleStaticLight.gltf" ar
+                    <model-viewer class="model" src="./media/assets/CandleStaticLight.gltf"
                         powerPreference="low-power" ar-modes="webxr scene-viewer quick-look" camera-controls
                         shadow-intensity="2" exposure="0.21" disable-pan disable-zoom shadow-softness="1"
                         camera-orbit="300deg 84deg auto" auto-rotate-delay="0" min-camera-orbit="300deg 84deg auto"
@@ -86,9 +86,9 @@
                     <div class="light inner"></div>
                     <div class="light center"></div>
                 </div>
-                <span>Over-the-air control (smart home integration)</span>
+                <span>Over-the-air control</span>
                 <div class="step-content">
-                    The process of igniting the candle remotely is seamlessly integrated through a dedicated mobile app.
+                    The process of igniting the candle remotely is seamlessly integrated through a dedicated mobile app and your smart home system.
                 </div>
             </div>
             <div class="step">
@@ -112,7 +112,7 @@
                     <div class="description"></div>
                 </div>
                 <div class="wix-img">
-                    <model-viewer class="model" src="./media/assets/CandleStaticLight.gltf" ar
+                    <model-viewer class="model" src="./media/assets/CandleStaticLight.gltf"
                         powerPreference="low-power" ar-modes="webxr scene-viewer quick-look" camera-controls
                         shadow-intensity="2" exposure="0.21" disable-pan disable-zoom shadow-softness="1" auto-rotate
                         min-camera-orbit="auto 84deg auto" max-camera-orbit="auto 84deg auto" touch-action="pan-y"
@@ -182,7 +182,7 @@
                         </div>
                     </div>
                     <div class="model-view">
-                        <model-viewer id="phone-view" class="model" src="./media/assets/CandleFast.gltf" ar
+                        <model-viewer id="phone-view" class="model" src="./media/assets/CandleFast.gltf"
                             powerPreference="low-power" ar-modes="webxr scene-viewer quick-look" camera-controls
                             shadow-intensity="2" exposure="0.21" disable-pan disable-zoom shadow-softness="1"
                             camera-orbit="50deg 86.04deg 9006m" auto-rotate-delay="0"
