fix profile span; header height on big screens

--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@
                     <span>
                         Pavel
                         <a href="https://www.linkedin.com/in/pavelm1/" target="_blank">
-                            <i class="fa-brands fa-linkedin" style="color: #ffffff;"></i>
+                            <i class="fa-brands fa-linkedin"></i>
                         </a>
                     </span>
                     <p></p>
@@ -248,7 +248,7 @@
                     <span>
                         Danylo
                         <a href="https://www.linkedin.com/in/danylo-semerak" target="_blank">
-                            <i class="fa-brands fa-linkedin" style="color: #ffffff;"></i>
+                            <i class="fa-brands fa-linkedin"></i>
                         </a>
                     </span>
                     <p></p>
